kubernets/invoice-manager-data.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data
      version: v1
  template:
    metadata:
      labels:
        app: data
        version: v1
    spec:
      serviceAccountName: invoice-mgr-sa
      containers:
        - name: data
          image: x00159358/invoice-mgr:v1.0.0
          command: [ "npm" ]
          args: [ "run", "data" ]
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: data
  namespace: default
  labels:
    app: data
    service: data
spec:
  selector:
    app: data
  ports:
    - name: http
      port: 3300
      targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: data
  namespace: default
spec:
  hosts:
    - data
  http:
    - name: data
      route:
        - destination:
            host: data
            subset: subset-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: data
  namespace: default
spec:
  host: data
  subsets:
    - name: subset-v1
      labels:
        version: v1
