kubernets/invoice-manager-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generator
      version: v1
  template:
    metadata:
      labels:
        app: generator
        version: v1
    spec:
      serviceAccountName: invoice-mgr-sa
      containers:
        - name: generator
          image: x00159358/invoice-mgr:v1.0.0
          command: [ "npm" ]
          args: [ "run", "generator" ]
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generator
      version: v2
  template:
    metadata:
      labels:
        app: generator
        version: v2
    spec:
      serviceAccountName: invoice-mgr-sa
      containers:
        - name: generator
          image: x00159358/invoice-mgr:v1.1.0
          command: [ "npm" ]
          args: [ "run", "generator" ]
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: generator
  namespace: default
  labels:
    app: generator
    service: generator
spec:
  selector:
    app: generator
  ports:
    - name: http
      port: 3300
      targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: generator
  namespace: default
spec:
  hosts:
    - generator
  http:
    - name: generator
      route:
        - destination:
            host: generator
            subset: subset-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: generator
  namespace: default
spec:
  host: generator
  subsets:
    - name: subset-v1
      labels:
        version: v1
