kubernets/invoice-manager-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
      version: v1
  template:
    metadata:
      labels:
        app: payment
        version: v1
    spec:
      serviceAccountName: invoice-mgr-sa
      containers:
        - name: payment
          image: x00159358/invoice-mgr:v1.0.0
          command: [ "npm" ]
          args: [ "run", "payment" ]
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            successThreshold: 1
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: default
  labels:
    app: payment
    service: payment
spec:
  selector:
    app: payment
  ports:
    - name: http
      port: 3300
      targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment
  namespace: default
spec:
  hosts:
    - payment
  http:
    - name: payment
      route:
        - destination:
            host: payment
            subset: subset-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: payment
  namespace: default
spec:
  host: payment
  subsets:
    - name: subset-v1
      labels:
        version: v1
