kubernets/invoice-manager-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-mgr-vs
spec:
  hosts:
    - "*"
  gateways:
    - invoice-mgr-gateway
  http:
    - route:
        - destination:
            host: app
            subset: subset-v1
